为属性核心渲染正态分布 Z-score (#310)
* generate attribute cores with zscore attached

* rename classes

* fix test

* add test: `testEnumAsNodeKey`

* respect minimum item level

* new config formats

* first completed draft, let's see if it works

* add missing item component config

* fix serialization

* small changes

* no more data class

* fix

* remove unused class

* add more extensions to NekoStack

* clean up Extensions.kt

* a boolean is enough for FireResistant.kt

* remove empty attribute

* attribute value scaling

allow attribute values to be scaled by config before they get rendered

refactor AttributeRegistry.kt to remove clutter code

* rewrite how quality data is stored

* fix

* fix

* fix fire_resistant

* redefine quality ranges

* set score to 0 if sigma is 0

* fix reforge/mod

* score respects min/max spread